compiler/tests/compile-error/record-errors.arret
(import [stdlib base])

(defrecord foo) ;~ ERROR wrong argument count; expected 2

(defrecord :keyword ())
          ;^^^^^^^^ ERROR expected record type constuctor declaration, found keyword

(defrecord _ [])
            ;^^ ERROR expected record value constructor declaration, found empty vector

(defrecord _ ())
            ;^^ ERROR expected record value constructor declaration, found empty list

(defrecord _ (1))
             ;^ ERROR expected symbol, found integer

(defrecord Foo (foo _))
                   ;^ ERROR anonymous record fields are not supported

(defrecord Foo (foo 1))
                   ;^ ERROR expected record field declaration, found integer

(defrecord Foo (foo []))
                   ;^^ ERROR expected record field declaration, found empty vector

(defrecord (Foo 1) ())
               ;^ ERROR bad polymorphic variable declaration

(defrecord (Point [N Num]) (point [x Num] [y Num]))

(def [_ (Point Int Float)] (point 1 2.0))
       ;^^^^^^^^^^^^^^^^^ ERROR wrong argument count; expected 1

(def [_ (Point Bool)] (point true))
              ;^^^^ ERROR mismatched types

; These polymorphic variables are actually fixed to a single type
(defrecord (FixedPolyRecord [A Int] [->_ ->]) (fixed-poly-record [pred (A ->_ Bool)]))

(def [_ (FixedPolyRecord Float ->)] 1)
                        ;^^^^^ ERROR mismatched types

(def [_ (FixedPolyRecord Int ->!)] 1)
                            ;^^^ ERROR mismatched purities

(def [_ (FixedPolyRecord Int Int)] 1)
                            ;^^^ ERROR type cannot be used as a purity

(def [_ (FixedPolyRecord Int [])] 1)
                            ;^^ ERROR empty vector cannot be used as a purity

(defrecord (AnonymousPolyParam [_ Int]) (_))
                               ;^ ERROR polymorphic parameters must have a name